--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lens-web-demo",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,7 +13,7 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
@@ -22,6 +22,6 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "veryfi-lens-sdk": "^1.0.9"
+    "veryfi-lens-wasm": "^1.1.2"
   }
 }
